--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/CreateATournamentWindow.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/CreateATournamentWindow.fxml
@@ -5,14 +5,11 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;"
-            xmlns="http://javafx.com/javafx/11.0.2"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="edu.ntnu.idatt1002.k1g01.controller.CreateATournamentController">
+<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.CreateATournamentController">
     <children>
-        <BorderPane prefHeight="540.0" prefWidth="960.0">
+        <BorderPane prefHeight="540.0" prefWidth="960.0" stylesheets="@style.css">
             <top>
-                <VBox prefHeight="95.0" prefWidth="960.0" BorderPane.alignment="CENTER">
+                <VBox prefHeight="105.0" prefWidth="960.0" BorderPane.alignment="CENTER">
                     <children>
                         <MenuBar>
                             <menus>
@@ -33,12 +30,12 @@
                                 </Menu>
                             </menus>
                         </MenuBar>
-                  <Pane prefHeight="15.0" prefWidth="960.0" />
-                  <HBox prefHeight="67.0" prefWidth="960.0">
+                  <Pane prefHeight="26.0" prefWidth="960.0" />
+                  <HBox prefHeight="78.0" prefWidth="960.0">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="58.0" prefWidth="69.0" style="-fx-background-color: lightgray;">
+                        <Button mnemonicParsing="false" prefHeight="58.0" prefWidth="88.0" style="-fx-background-color: lightgray; -fx-border-color: lightgray;">
                            <graphic>
-                              <ImageView fitHeight="54.0" fitWidth="63.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="50.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@icons/menu.png" />
                                  </image>
@@ -47,7 +44,7 @@
                         <Pane prefHeight="62.0" prefWidth="277.0" />
                         <BorderPane prefHeight="200.0" prefWidth="200.0">
                            <center>
-                              <Label text="Create A Tournament" BorderPane.alignment="CENTER" />
+                              <Label prefHeight="33.0" prefWidth="143.0" text="Create A Tournament" BorderPane.alignment="CENTER" />
                            </center>
                         </BorderPane>
                      </children>
@@ -56,10 +53,10 @@
                 </VBox>
             </top>
          <center>
-            <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <HBox prefHeight="415.0" prefWidth="960.0" BorderPane.alignment="CENTER">
                <children>
                   <Pane prefHeight="445.0" prefWidth="46.0" />
-                  <VBox prefHeight="445.0" prefWidth="201.0">
+                  <VBox prefHeight="437.0" prefWidth="250.0">
                      <children>
                         <Pane prefHeight="38.0" prefWidth="202.0" />
                         <Label text="Tournament Name" />
@@ -71,10 +68,10 @@
                         <Label layoutX="10.0" layoutY="114.0" text="Teams Per Group" />
                         <ComboBox layoutX="10.0" layoutY="132.0" prefHeight="26.0" prefWidth="90.0" promptText="4" />
                         <Pane layoutX="10.0" layoutY="157.0" prefHeight="22.0" prefWidth="202.0" />
-                        <Label layoutX="10.0" layoutY="180.0" text="Teams Advancing From Each Group" />
+                        <Label layoutX="10.0" layoutY="180.0" prefHeight="25.0" prefWidth="266.0" text="Teams Advancing From Each Group" />
                         <ComboBox layoutX="10.0" layoutY="197.0" prefHeight="26.0" prefWidth="90.0" promptText="2" />
-                        <Pane layoutX="10.0" layoutY="224.0" prefHeight="66.0" prefWidth="202.0" />
-                        <Button mnemonicParsing="false" prefHeight="81.0" prefWidth="201.0" text="Cancel">
+                        <Pane layoutX="10.0" layoutY="224.0" prefHeight="38.0" prefWidth="249.0" />
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="202.0" text="Cancel">
                            <effect>
                               <InnerShadow />
                            </effect></Button>
@@ -83,25 +80,25 @@
                   <VBox prefHeight="445.0" prefWidth="226.0">
                      <children>
                         <Pane prefHeight="38.0" prefWidth="202.0" />
-                        <Label prefHeight="18.0" prefWidth="105.0" text="Match Winner By" />
+                        <Label prefHeight="22.0" prefWidth="155.0" text="Match Winner By" />
                         <ComboBox prefWidth="150.0" promptText="Match Points" />
                         <Pane layoutX="10.0" layoutY="10.0" prefHeight="264.0" prefWidth="226.0" />
-                        <Button mnemonicParsing="false" prefHeight="81.0" prefWidth="201.0" text="Create A Tournament">
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="202.0" text="Create A Tournament">
                            <effect>
                               <InnerShadow />
                            </effect></Button>
                      </children></VBox>
                   <Pane prefHeight="445.0" prefWidth="115.0" />
-                  <VBox prefHeight="445.0" prefWidth="281.0">
+                  <VBox prefHeight="428.0" prefWidth="266.0">
                      <children>
                         <Label alignment="CENTER" prefHeight="38.0" prefWidth="287.0" text="Team List" />
                         <Label text="Add Team" />
                         <HBox alignment="CENTER" prefHeight="27.0" prefWidth="282.0">
                            <children>
                               <TextField prefHeight="26.0" prefWidth="226.0" />
-                              <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="46.0" style="-fx-background-color: lightgray;">
+                              <Button mnemonicParsing="false" prefHeight="39.0" prefWidth="55.0" scaleShape="false" style="-fx-background-color: lightgray; -fx-border-color: lightgray;">
                                  <graphic>
-                                    <ImageView fitHeight="35.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                                    <ImageView fitHeight="31.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@icons/plus.png" />
                                        </image>
@@ -110,7 +107,7 @@
                            </children>
                         </HBox>
                         <Pane prefHeight="31.0" prefWidth="282.0" />
-                        <ListView prefHeight="305.0" prefWidth="282.0" />
+                        <ListView prefHeight="290.0" prefWidth="266.0" />
                      </children></VBox>
                </children>
             </HBox>
