--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/CreateATournament.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/CreateATournament.fxml
@@ -60,18 +60,18 @@
                      <children>
                         <Pane prefHeight="38.0" prefWidth="202.0" />
                         <Label text="Tournament Name" />
-                        <TextField />
+                        <TextField fx:id="nameInputField" />
                         <Pane layoutX="10.0" layoutY="10.0" prefHeight="22.0" prefWidth="202.0" />
                         <Label layoutX="10.0" layoutY="48.0" text="Tournament Type" />
-                        <ComboBox prefWidth="150.0" promptText="Knockout Stages" />
+                        <ChoiceBox fx:id="tournamentTypeInput" prefWidth="150.0" />
                         <Pane layoutX="10.0" layoutY="92.0" prefHeight="22.0" prefWidth="202.0" />
                         <Label layoutX="10.0" layoutY="114.0" text="Teams Per Group" />
-                        <ComboBox layoutX="10.0" layoutY="132.0" prefHeight="26.0" prefWidth="90.0" promptText="4" />
+                        <ChoiceBox fx:id="teamsPerGroupInput" prefHeight="31.0" prefWidth="95.0" />
                         <Pane layoutX="10.0" layoutY="157.0" prefHeight="22.0" prefWidth="202.0" />
                         <Label layoutX="10.0" layoutY="180.0" prefHeight="25.0" prefWidth="266.0" text="Teams Advancing From Each Group" />
-                        <ComboBox layoutX="10.0" layoutY="197.0" prefHeight="26.0" prefWidth="90.0" promptText="2" />
-                        <Pane layoutX="10.0" layoutY="224.0" prefHeight="38.0" prefWidth="249.0" />
-                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="202.0" text="Cancel">
+                        <ChoiceBox fx:id="teamsAdvancingFromGroupInput" prefHeight="31.0" prefWidth="93.0" />
+                        <Pane layoutX="10.0" layoutY="224.0" prefHeight="30.0" prefWidth="250.0" />
+                        <Button mnemonicParsing="false" onAction="#cancelBackToHomePage" prefHeight="60.0" prefWidth="202.0" text="Cancel">
                            <effect>
                               <InnerShadow />
                            </effect></Button>
@@ -81,9 +81,9 @@
                      <children>
                         <Pane prefHeight="38.0" prefWidth="202.0" />
                         <Label prefHeight="22.0" prefWidth="155.0" text="Match Winner By" />
-                        <ComboBox prefWidth="150.0" promptText="Match Points" />
-                        <Pane layoutX="10.0" layoutY="10.0" prefHeight="264.0" prefWidth="226.0" />
-                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="202.0" text="Create A Tournament">
+                        <ChoiceBox fx:id="matchTypeInput" prefWidth="150.0" />
+                        <Pane layoutX="10.0" layoutY="10.0" prefHeight="265.0" prefWidth="226.0" />
+                        <Button mnemonicParsing="false" onAction="#createTournament" prefHeight="60.0" prefWidth="202.0" text="Create A Tournament">
                            <effect>
                               <InnerShadow />
                            </effect></Button>
@@ -95,8 +95,8 @@
                         <Label text="Add Team" />
                         <HBox alignment="CENTER" prefHeight="27.0" prefWidth="282.0">
                            <children>
-                              <TextField prefHeight="26.0" prefWidth="226.0" />
-                              <Button mnemonicParsing="false" prefHeight="39.0" prefWidth="55.0" scaleShape="false" style="-fx-background-color: lightgray; -fx-border-color: lightgray;">
+                              <TextField fx:id="teamNameInputField" prefHeight="26.0" prefWidth="226.0" />
+                              <Button mnemonicParsing="false" onAction="#addTeam" prefHeight="39.0" prefWidth="55.0" scaleShape="false" style="-fx-background-color: lightgray; -fx-border-color: lightgray;">
                                  <graphic>
                                     <ImageView fitHeight="31.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -107,7 +107,7 @@
                            </children>
                         </HBox>
                         <Pane prefHeight="31.0" prefWidth="282.0" />
-                        <ListView prefHeight="290.0" prefWidth="266.0" />
+                        <ListView prefHeight="286.0" prefWidth="266.0" />
                      </children></VBox>
                </children>
             </HBox>
