--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/style.css
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/style.css
@@ -23,6 +23,20 @@
     -fx-opacity: 1;
 }
 
+.radio-button{
+    -fx-font-size: 11pt;
+    -fx-font-family: "Segoe UI Semibold";
+    -fx-text-fill: black;
+    -fx-opacity: 1;
+}
+
+.button{
+    -fx-font-size: 14pt;
+    -fx-font-family: "Segoe UI Semibold";
+    -fx-text-fill: black;
+    -fx-opacity: 1;
+}
+
 .menu-bar {
     -fx-background-color: derive(#1d1d1d,20%);
 }
