--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/style.css
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/style.css
@@ -1,3 +1,7 @@
+*{
+    -fx-font-family: "Segoe UI Semibold";
+}
+
 .background {
     -fx-background-color: #1d1d1d;
 }
@@ -22,7 +26,7 @@
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
-#addTeamErrorOutput{
+.errorFeedback{
     -fx-font-size: 9pt;
     -fx-text-fill:red;
 }
@@ -35,7 +39,13 @@
 }
 
 .button{
-    -fx-font-size: 14pt;
+    -fx-font-size: 10pt;
+    -fx-font-family: "Segoe UI Semibold";
+    -fx-text-fill: black;
+    -fx-opacity: 1;
+}
+.table-view{
+    -fx-font-size: 12pt;
     -fx-font-family: "Segoe UI Semibold";
     -fx-text-fill: black;
     -fx-opacity: 1;
