--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/HomePage.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/HomePage.fxml
@@ -5,10 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960" prefHeight="540.0" prefWidth="960"
-            xmlns="http://javafx.com/javafx/11.0.2"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="edu.ntnu.idatt1002.k1g01.controller.HomePageController">
+<AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960" prefHeight="540.0" prefWidth="960" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.HomePageController">
    <children>
       <BorderPane layoutY="-2.0" prefHeight="544.0" prefWidth="962.0" stylesheets="@style.css">
          <top>
@@ -39,7 +36,7 @@
          <center>
             <AnchorPane prefHeight="534.0" prefWidth="962.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button alignment="CENTER" layoutX="369.0" layoutY="174.0" mnemonicParsing="false" onAction="#changeScreenToCreateTournament" prefHeight="60.0" prefWidth="214.0" text="Create new tournament">
+                  <Button alignment="CENTER" layoutX="365.0" layoutY="174.0" mnemonicParsing="false" onAction="#changeScreenToCreateTournament" prefHeight="60.0" prefWidth="231.0" text="Create new tournament">
                      <effect>
                         <InnerShadow />
                      </effect>
@@ -47,7 +44,7 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="369.0" layoutY="274.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="214.0" text="Open tournament">
+                  <Button layoutX="366.0" layoutY="274.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="229.0" text="Open tournament">
                      <effect>
                         <InnerShadow />
                      </effect>
@@ -55,7 +52,7 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Label alignment="CENTER" layoutX="292.0" layoutY="27.0" prefHeight="106.0" prefWidth="369.0" style="-fx-font-size: 30;" text="Tournamint">
+                  <Label alignment="CENTER" layoutX="292.0" layoutY="30.0" prefHeight="106.0" prefWidth="369.0" style="-fx-font-size: 30;" text="Tournamint">
                      <font>
                         <Font size="36.0" />
                      </font>
