Can now create tournament that gets sent to AdministrateTournamentController.java

--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/AdministrateTournament.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/AdministrateTournament.fxml
@@ -5,16 +5,27 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/11.0.2"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.AdministrateTournamentController">
+<AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.AdministrateTournamentController">
     <children>
         <BorderPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" stylesheets="@style.css">
             <center>
                 <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <center>
-                        <TabPane maxHeight="435.0" maxWidth="920.0" minHeight="435.0" minWidth="920.0" prefHeight="435.0" prefWidth="920.0" style="-fx-border-color: black;" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+                        <TabPane fx:id="matchesTabPaneOutput" maxHeight="435.0" maxWidth="920.0" minHeight="435.0" minWidth="920.0" prefHeight="435.0" prefWidth="920.0" style="-fx-border-color: black;" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
                             <tabs>
-                                <Tab text="Upcoming Matches">
+                                <Tab text="All Matches">
+                                    <content>
+                                        <TableView prefHeight="200.0" prefWidth="200.0">
+                                            <columns>
+                                                <TableColumn prefWidth="500.0" text="Teams" />
+                                                <TableColumn prefWidth="120.0" text="Date" />
+                                                <TableColumn prefWidth="120.0" text="Time" />
+                                                <TableColumn prefWidth="178.0" text="Place" />
+                                            </columns>
+                                        </TableView>
+                                    </content>
+                                </Tab>
+                                <!--<Tab text="Upcoming Matches">
                                     <content>
                                         <TableView prefHeight="200.0" prefWidth="200.0">
                                             <columns>
@@ -37,19 +48,7 @@
                                             </columns>
                                         </TableView>
                                     </content>
-                                </Tab>
-                                <Tab text="All Matches">
-                                    <content>
-                                        <TableView prefHeight="200.0" prefWidth="200.0">
-                                            <columns>
-                                                <TableColumn prefWidth="500.0" text="Teams" />
-                                                <TableColumn prefWidth="120.0" text="Date" />
-                                                <TableColumn prefWidth="120.0" text="Time" />
-                                                <TableColumn prefWidth="178.0" text="Place" />
-                                            </columns>
-                                        </TableView>
-                                    </content>
-                                </Tab>
+                                </Tab>-->
                             </tabs>
                         </TabPane>
                     </center>
@@ -89,7 +88,7 @@
                                  </ImageView>
                              </graphic></Button>
                         <Pane prefHeight="200.0" prefWidth="200.0" />
-                              <Text fill="#18205b" strokeType="OUTSIDE" strokeWidth="0.0" text="Tournament name" textAlignment="CENTER" wrappingWidth="387.61865234375">
+                              <Text fx:id="tournamentNameOutput" fill="#18205b" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titles" text="Tournament name" textAlignment="CENTER" wrappingWidth="387.61865234375">
                                   <font>
                                       <Font size="35.0" />
                                   </font>
