--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/EnterResults.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/EnterResults.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
@@ -50,14 +51,14 @@
                 <AnchorPane maxWidth="930.0" minHeight="0.0" minWidth="0.0" prefHeight="358.0" prefWidth="898.0">
                      <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e4e4e480" height="88.0" layoutX="8.0" layoutY="308.0" stroke="#c3c1c1" strokeType="INSIDE" width="910.0" />
-                        <DatePicker fx:id="pickedDate" layoutX="33.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="YYYY-MM-DD" />
+                        <DatePicker fx:id="dateField" layoutX="33.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="YYYY-MM-DD" />
                         <Text fill="#5b5b5b" layoutX="138.0" layoutY="336.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
                            <font>
                               <Font size="20.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="timeField" layoutX="341.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" />
-                        <TextField fx:id="placeField" layoutX="649.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" />
+                        <TextField fx:id="timeField" layoutX="341.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="HH-MM-SS" />
+                        <TextField fx:id="infoField" layoutX="649.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="Information" />
                         <Text fill="#5b5b5b" layoutX="444.0" layoutY="337.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time">
                            <font>
                               <Font size="20.0" />
@@ -76,11 +77,11 @@
                                        <font>
                                           <Font size="50.0" />
                                        </font></TextField>
-                                    <Button layoutX="330.0" layoutY="140.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: green;" text="+1">
+                                    <Button layoutX="330.0" layoutY="140.0" mnemonicParsing="false" onAction="#incrementTeam1PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: green;" text="+1">
                                        <font>
                                           <Font size="20.0" />
                                        </font></Button>
-                                    <Button layoutX="330.0" layoutY="200.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" text="-1">
+                                    <Button layoutX="330.0" layoutY="200.0" mnemonicParsing="false" onAction="#decrementTeam1PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" text="-1">
                                        <font>
                                           <Font size="20.0" />
                                        </font></Button>
@@ -97,11 +98,11 @@
                                        <font>
                                           <Font size="50.0" />
                                        </font></TextField>
-                                    <Button layoutX="330.0" layoutY="140.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: green;" text="+1">
+                                    <Button layoutX="330.0" layoutY="140.0" mnemonicParsing="false" onAction="#incrementTeam2PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: green;" text="+1">
                                        <font>
                                           <Font size="20.0" />
                                        </font></Button>
-                                    <Button layoutX="330.0" layoutY="200.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" text="-1">
+                                    <Button layoutX="330.0" layoutY="200.0" mnemonicParsing="false" onAction="#decrementTeam2PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" text="-1">
                                        <font>
                                           <Font size="20.0" />
                                        </font></Button>
@@ -117,15 +118,21 @@
                      </children></AnchorPane>
                 <AnchorPane maxHeight="80.0" maxWidth="930.0" minHeight="0.0" minWidth="0.0" prefHeight="50.0" prefWidth="898.0">
                      <children>
-                        <Button defaultButton="true" layoutX="328.0" layoutY="12.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="588.0" style="-fx-background-color: green; -fx-border-color: black;" text="Confirm Results" textFill="WHITE">
+                        <Button defaultButton="true" layoutX="328.0" layoutY="12.0" mnemonicParsing="false" onAction="#confirmResultsAndGoBack" prefHeight="49.0" prefWidth="588.0" style="-fx-background-color: green; -fx-border-color: black;" text="Confirm Results" textFill="WHITE">
                            <font>
                               <Font size="25.0" />
                            </font>
+                           <effect>
+                              <InnerShadow />
+                           </effect>
                         </Button>
                         <Button layoutX="11.0" layoutY="12.0" mnemonicParsing="false" onAction="#cancelAndGoBack" prefHeight="49.0" prefWidth="308.0" style="-fx-background-color: red; -fx-border-color: black;" text="Cancel" textFill="WHITE">
                            <font>
                               <Font size="25.0" />
                            </font>
+                           <effect>
+                              <InnerShadow />
+                           </effect>
                         </Button>
                      </children>
                   </AnchorPane>
