--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterResults.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterResults.fxml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.EnterResultsController">
+<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.EnterResultsController">
     <children>
         <BorderPane prefHeight="540.0" prefWidth="960.0" stylesheets="@style.css">
             <top>
@@ -126,7 +116,7 @@
                               <InnerShadow />
                            </effect>
                         </Button>
-                        <Button layoutX="11.0" layoutY="12.0" mnemonicParsing="false" onAction="#cancelAndGoBack" prefHeight="49.0" prefWidth="308.0" style="-fx-background-color: red; -fx-border-color: black;" text="Cancel" textFill="WHITE">
+                        <Button layoutX="11.0" layoutY="12.0" mnemonicParsing="false" onAction="#cancelAndGoBack" prefHeight="49.0" prefWidth="308.0" style="-fx-background-color: #FF282D; -fx-border-color: black;" text="Cancel" textFill="WHITE">
                            <font>
                               <Font size="25.0" />
                            </font>
